kustomize/BASE/k8s/UI/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  # namespace: default #comment this cause it will be defined in run command with kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-pod
  



  template:
    metadata:
      labels:
        app: ui-pod
    spec:
      containers:
        - image: youssef11gaber10/deployment-ui-react:latest
          name: ui-container
          imagePullPolicy: Always
          ports:
            - containerPort: 3000 # will be 80 when we implement nginx 
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 5
            failureThreshold: 2
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
